Align icons in social media buttons, put line in middle divider, green dot in open button, fix portrait proportions

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 .flex {
@@ -43,10 +44,10 @@ body {
   background-image: url(images/shawn_headshot.jpg);
   background-size: cover;
   border-radius: 50%;
-  height: 90px;
+  height: 100px;
   margin: auto;
-  margin-top: 1em;
-  width: 90px;
+  margin-top: 2em;
+  width: 100px;
 }
 
 h5 {
@@ -259,7 +260,7 @@ fieldset {
 .nav-right {
   display: flex;
   flex: 23%;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
   min-width: 15em;
   margin-right: 3em;
 }
@@ -280,9 +281,15 @@ fieldset {
 .button-open {
   align-items: center;
   border-radius: 5rem;
+  font-weight: bold;
   display: flex;
   justify-content: center;
   width: 6rem;
+}
+
+.dot {
+  width: 1em;
+  margin-right: 1em;
 }
 
 .edit-btns {
@@ -290,6 +297,7 @@ fieldset {
   background-repeat: no-repeat;
   background-position: center;
   height: 3.5em;
+  margin: 0 0.5em;
   width: 3.5em;
 }
 
@@ -412,9 +420,28 @@ section {
 /*Divider*/
 
 .middle-divider {
+  /*margin-bottom: 60px;*/
   display: flex;
+  justify-content:  center;
   flex: 8%;
-  justify-content: center
+  /*margin-left: 48px;
+  margin-right: 40px;*/
+}
+
+.divider-left {
+  margin-right: 0.8em;
+}
+
+.divider-right {
+  margin-left: 0.8em;
+}
+
+.divider-left,
+.divider-right {
+  border-bottom: 3px solid #d3dae1;
+  margin-right: 10px;
+  width: 44%;
+  margin-bottom: 3em;
 }
 
 .up-arrow {
@@ -485,24 +512,24 @@ th {
 }
 
 .social-buttons {
-  border: none;
-  border-radius: 4px;
   color: #fff;
   display: flex;
-  font-size: 0.75rem;
-  flex: 26%;
+  align-items: center;
+  font-size: 1em;
+  /*flex: 26%;*/
   height: 3rem;
-  justify-content: center;
   margin: 1em;
   margin: 0 0 1rem;
-  padding: 0 0 0 0;
-  width: 100%;
+  padding-left: 4em;
+  /*width: 100%;*/
 }
 
 .socialmedia-icons {
-  background-size: 2em;
+  /*background-size: 2em;
   background-repeat: no-repeat;
-  background-position: left;
+  background-position: left;*/
+  width: 2em;
+  margin-right: 4em;
 }
 
 .facebook {
